= 
:allow-uri-read: 


|===


| *Datum* | *Lösungsbereich* | *Beschreibung der Änderung* 


| 04/27/2023 | Hybrid Cloud | Veeam Backup & Restore in VMware Cloud mit AWS FSX for ONTAP hinzugefügt 


| 03/31/2023 | Datenbank | Hinzugefügt: Oracle Database Deployment and Protection in AWS FSX/EC2 with iSCSI/ASM 


| 03/31/2023 | Datenbank | Backup, Wiederherstellung und Klonen von Oracle-Datenbanken mit SnapCenter Services hinzugefügt 


| 03/29/2023 | Automatisierung | Aktualisierter Blog „FSX for ONTAP Monitoring and Auto-Resizing using AWS Lambda function“ mit Optionen für die private/öffentliche Bereitstellung sowie manuellen/automatisierten Implementierungsoptionen. 


| 03/22/2023 | Automatisierung | Hinzugefügt Blog: FSX für ONTAP-Überwachung und Auto-Resizing mit AWS Lambda-Funktion 


| 02/15/2023 | Datenbank | Implementierung und Disaster Recovery nach SQL in AWS FSX/EC2 hinzugefügt 


| 02/07/2023 | Hybrid Cloud | Zusätzlicher Blog: Allgemeine Verfügbarkeit der Unterstützung von NetApp Cloud Volumes Service-Datenspeichern für die Google Cloud VMware Engine 


| 02/07/2023 | Hybrid Cloud | Zusätzlicher TR-4955: Disaster Recovery mit FSX für ONTAP und VMC (AWS VMware Cloud) 


| 01/24/2023 | Datenbank | Hinzugefügter TR-4954: Oracle Database Deployment and Protection on Azure NetApp Files 


| 01/12/2023 | Datenbank | Zusätzlicher Blog: Sichern Sie Ihre SQL Server Workloads mithilfe von NetApp SnapCenter mit Amazon FSX für NetApp ONTAP 


| 12/15/2022 | Datenbank | Zusätzlich wurde TR-4923: SQL Server auf AWS EC2 mit Amazon FSX für NetApp ONTAP hinzugefügt 


| 12/06/2022 | Datenbank | Zusätzliche 7 Videos zur Oracle Datenbankmodernisierung in der Hybrid Cloud mit Amazon FSX Storage 


| 10/25/2022 | Hybrid Cloud | Link zur VMware-Dokumentation für FSX ONTAP als NFS-Datastore hinzugefügt 


| 10/25/2022 | Hybrid Cloud | Zusätzliche Referenz im Blog zum Konfigurieren von Hybrid Clouds mit FSX ONTAP und VMC auf AWS SDDC mithilfe von VMware HCX 

