@@ -18087,4 +18087,40 @@
   <block id="1260fc391141c4810f2e3a97eaef162e" category="cell">03/22/2023</block>
   <block id="ba7124a5ffeb6501794efa91cdcb129b" category="cell">Link zur VMware-Dokumentation für FSX ONTAP als NFS-Datastore hinzugefügt</block>
   <block id="d7c05d05b1d6ce69dff2a4eaa1692f17" category="sidebar">Veeam Backup &amp; Restore in VMware Cloud mit AWS FSX for NetApp ONTAP</block>
+  <block id="1f791cf07735c71bdb472a0ccd42abc7" category="cell">05/04/2023</block>
+  <block id="35cec0f40dca2af7a6d3c73676c4629d" category="cell">Inhalte zum Thema „What's New with VMware vSphere 8“ hinzugefügt</block>
+  <block id="8b5fd5c25439f60370c36458db046f5e" category="doc">Neuerungen bei VMware vSphere 8</block>
+  <block id="d64ac18d7cdc111af11284a04f9e8b1e" category="paragraph">Autor: Chris Reno, NetApp Solutions Engineering</block>
+  <block id="5a16d86949ce13083d30d1c331be09cb" category="paragraph">Die Integration der Technologien von NetApp und VMware blickt auf 20 Jahre Erfahrung und Tausende Entwicklungsstunden zurück. Mit der Einführung von vSphere 8 und ONTAP 9.12 liefern beide Unternehmen Produkte für anspruchsvollste Workloads von Kunden. Wenn diese Produkte in Lösungen kombiniert werden, sind echte Herausforderungen für Kunden, die gelöst werden – vor Ort oder in der Public Cloud. Wenn diese Produkte in einer Lösung kombiniert werden, sind echte Kundenherausforderungen gelöst, sei es vor Ort oder in der Public Cloud.</block>
+  <block id="4eba71964e65640552100b4af7c50e86" category="paragraph">Um Sie bei der Bestimmung der Supportfähigkeit von Produkten, Protokollen, Betriebssystemen usw. zu unterstützen, lesen Sie bitte die folgenden Ressourcen:</block>
+  <block id="bab924f6f70545a4aab5c02282b4321d" category="list-text">Der<block ref="cdfba3111aed90ef850f414330a864eb" category="inline-link-rx"></block> (IMT). Der IMT definiert die qualifizierten Komponenten und Versionen, die Sie zur Erstellung von FC/FCoE-, iSCSI-, NFS- und CIFS-Konfigurationen sowie zur Integration mit zusätzlichen Plug-ins und Softwareangeboten verwenden können.</block>
+  <block id="e08175c6fa64cba68719dea85ebd9d34" category="inline-link">VMware Compatibility Guide</block>
+  <block id="e96d25b875cbad01256de32331620fce" category="list-text">Der<block ref="132c849774dbad448418b619a953cbd1" category="inline-link-rx"></block>. Der VMware Compatibility Guide listet die Kompatibilität von System, I/O, Storage/SAN, Backup und vieles mehr mit VMware Infrastruktur- und Software-Produkten auf.</block>
+  <block id="cca95a1e810067767564618ea73079be" category="list-text"><block ref="ec744c32e869920be1556ab8ebc057ef" category="inline-link-rx"></block>. Die ONTAP Tools für VMware vSphere sind ein einzelnes vCenter Server Plug-in, das die Erweiterungen Virtual Storage Console (VSC), VASA Provider und Storage Replication Adapter (SRA) umfasst. OTV 9.12 wird vollständig mit VMware vSphere 8 unterstützt und bietet Kunden täglich echten Mehrwert.</block>
+  <block id="ae33d50ae700fed2ee8028004d9fa2d8" category="section-title">Von NetApp ONTAP und VMware unterstützte Versionen</block>
+  <block id="ed126bbe4f371826a7c7c9d6fdd35e54" category="admonition">Lassen Sie die Seite(n) bei der Auswahl eines Links in den folgenden Tabellen aufbauen.</block>
+  <block id="e450cac7ca4b207e6cb6c51eeb3c76dd" category="cell">*VMware vSphere-Version*</block>
+  <block id="54d1b3917151f3d89ddbd7aef9f811dd" category="cell">*SAN*</block>
+  <block id="b4ccd4984cce17a35c772737cf9415b1" category="cell">*NFS*</block>
+  <block id="ea2b80d118e24f4d3328c20552636f22" category="cell">*OTV*</block>
+  <block id="dccf9c2e4a699b348abaf0369603c1a0" category="cell">*SnapCenter*</block>
+  <block id="b97d2c4e1a2a118c500af6e32504301f" category="cell">*VSphere 8*</block>
+  <block id="3c30688c35eac25f7729ec4ee134e7e3" category="cell"><block ref="f010a57a1b1362e74ef056cd949b4f6b" category="inline-link-rx"></block></block>
+  <block id="c538764856660dbf5ac35d08c5b7bcdf" category="cell"><block ref="5983a3bb611cf1b4562bfd78f97ed318" category="inline-link-rx"></block></block>
+  <block id="a140bde1e447ebe74a0b6b693d05d3c6" category="cell"><block ref="c14e144a71a125f874ca16b78c671347" category="inline-link-rx"></block></block>
+  <block id="8d153eb947f0747c73debd6aa0564387" category="cell"><block ref="9e4cfb7f25d7fb71f62ac8aad4b23fac" category="inline-link-rx"></block></block>
+  <block id="87efc48b7f668d33418b1f846e08a0bf" category="cell">*VSphere 8u1*</block>
+  <block id="adebed85a7d92b0f3fc4b5cfc97078b6" category="cell"><block ref="bdb3662ee535fb90a843ab7d85efbd16" category="inline-link-rx"></block></block>
+  <block id="055cce5491290ec858a19e499e0d9e71" category="cell"><block ref="bd210893ee82e4c865fcf08bbaf31838" category="inline-link-rx"></block></block>
+  <block id="336d5ebc5436534e61d16e63ddfca327" category="cell">-</block>
+  <block id="1f0f8c35492e97597c98b9dc82afa362" category="cell">*Speichersystem / Protokolle*</block>
+  <block id="e90637603dd7a81f8a9115bb4ffd28f9" category="cell">*OTV - SRA*</block>
+  <block id="d7d7d2428ec9c1791dc7f644b043a8d4" category="cell">*OTV – VASA Provider*</block>
+  <block id="81e3cc47d6ed146bbe1096018a69f40c" category="cell">*SnapCenter Plug-in für VMware vSphere*</block>
+  <block id="1a718e68b847d8b2043c7f76af9a4858" category="cell"><block ref="34ab3c79d36e5a654b9402fe2fcf7f3b" category="inline-link-rx"></block></block>
+  <block id="391de35bbb4cf1a51813527b129bb11e" category="cell"><block ref="e3a74d6b6b54621583ac737da6124d3a" category="inline-link-rx"></block></block>
+  <block id="47c5c0877638b8f808901039637b1474" category="cell"><block ref="8ef8fc61fd753b52cc179e3463e5820b" category="inline-link-rx"></block></block>
+  <block id="b8145535eda5b8ac300fd64bfa74cc26" category="cell"><block ref="64c621ea990d75acd1bb8fba7b272f2c" category="inline-link-rx"></block></block>
+  <block id="315a0755b344c41b2a45eb62f3868930" category="cell"><block ref="c0dded1a1fb8dd474b19235d36c5c4c7" category="inline-link-rx"></block></block>
+  <block id="1e6ad53e48d26e8f800d9e60c340e84d" category="sidebar">Neuerungen bei VMware vSphere 8</block>
 </blocks>
