@@ -27,6 +27,9 @@ Kürzliche Änderungen im NetApp Solutions-Begleitmaterial. Die letzten Änderun
 | *Datum* | *Lösungsbereich* | *Beschreibung der Änderung* 
 
 
+| 05/04/2023 | Einheitliche | Inhalte zum Thema „What's New with VMware vSphere 8“ hinzugefügt 
+
+
 | 04/27/2023 | Hybrid Cloud | Veeam Backup & Restore in VMware Cloud mit AWS FSX for ONTAP hinzugefügt 
 
 
@@ -400,6 +403,9 @@ Kürzliche Änderungen im NetApp Solutions-Begleitmaterial. Die letzten Änderun
 
 
 | *Datum* | *Lösungsbereich* | *Beschreibung der Änderung* 
+
+
+| 05/04/2023 | Einheitliche | Inhalte zum Thema „What's New with VMware vSphere 8“ hinzugefügt 
 
 
 | 08/05/2022 | Einheitliche | „Neustart erforderlich“-Informationen für die empfohlenen ESXi- und ONTAP-Einstellungen hinzugefügt 
