@@ -3,6 +3,8 @@ indexpage:
   tiles:
   - title: Erste Schritte/Best Practices
     links:
+    - title: Neuerungen bei VMware vSphere 8
+      url: "/vmware-vsphere8-intro.html"
     - title: 'NetApp und VMware: Erste Schritte'
       url: "/netapp-vmware.html"
     - title: Vorteile von NetApp ONTAP für VMware vSphere Administratoren
