@@ -8,6 +8,9 @@
 | *Datum* | *Lösungsbereich* | *Beschreibung der Änderung* 
 
 
+| 05/04/2023 | Einheitliche | Inhalte zum Thema „What's New with VMware vSphere 8“ hinzugefügt 
+
+
 | 04/27/2023 | Hybrid Cloud | Veeam Backup & Restore in VMware Cloud mit AWS FSX for ONTAP hinzugefügt 
 
 
